@@ -1,5 +1,10 @@
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/autotools.py: added automatic fallback to configure
+	if autogen.sh does not exist.
+
+2008-08-15  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/scheduler.py: import missing module and initialize
 	correctly change notification.
 
